# milano

./: .gitignore  README.md  example.json  helper_receipt.py  helper_tx_hash.py  offline_verifier.py  online_creator.py  output.json  utils.py
examples/: output_nft.json  proof.json  proof_nft.json
program/: Cargo.toml
program/src/: lib.rs  main.rs
qr/: Cargo.toml
qr/src/: main.rs
rpi_verifier/: fixture.json  open_door.py  verifier.py
sp1/: Cargo.toml
sp1/contracts/src/fixtures/: fixture.json
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/lib/: Cargo.toml
sp1/lib/src/: lib.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
