[package]
name = "tx_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
blake2 = "0.9"
rlp = "0.5.0"
ethabi = "18.0.0"
k256 = { version = "0.13.3"}