[package]
name = "fibonacci-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }

tiny-keccak = { workspace = true }

hex = {workspace = true}
blake2 = {workspace = true}
rlp = {workspace = true}
k256 = {workspace = true}
ethabi = {workspace = true}
